--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Movie Rating</title>
-    <link ref="stylesheet" href="./reset.css" />
+    <title>Movie Ratings</title>
+    <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./style.css" />
     <script type="module" src="./movie.js"></script>
   </head>
   <body>
-    <header class="title">
-      <h1>Movie Ratings</h1>
-      <input type="text" id="search-input" placeholder="Search movies..." />
-      <button id="search-button">Search</button>
+    <header class="title" />
+    <h1>Movie Ratings</h1>
+    <input type="text" id="search-input" placeholder="Search movies..." />
+    <button id="search-button">Search</button>
 
     <section>
-      <div id="movie-container">
-      </div>
+      <div id="movie-container"></div>
     </section>
   </body>
 </html>
